[package]
name = "tokstream"
description = "Library for expressing token stream of lexed source files for the nom crate."
license = "MIT"
version = "0.1.0"
authors = ["Reto Achermann <achreto@cs.ubc.ca>"]
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
srcspan = { git = 'https://github.com/achreto/rust-srcspan' }



